some files are changed

--- a/configuration.html
+++ b/configuration.html
@@ -654,9 +654,9 @@
                       <td>Veterinary</td>
                       <td>$5000</td>
                       <td>
-                        <a href="job-description.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
+                        <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
                         <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
-                        <a href="job-description.html" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
+                        <a href="" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
                       </td>
                     </tr>
                     <tr>
@@ -665,9 +665,9 @@
                       <td>Gambling</td>
                       <td>$8000</td>
                       <td>
-                        <a href="job-description.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
+                        <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
                         <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
-                        <a href="job-description.html" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
+                        <a href="" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
                       </td>
                     </tr>
                     <tr>
@@ -676,9 +676,9 @@
                       <td>Music</td>
                       <td>$11000</td>
                       <td>
-                        <a href="job-description.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
+                        <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
                         <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
-                        <a href="job-description.html" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
+                        <a href="" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
                       </td>
                     </tr>
                   </tbody>
