--- a/employee-index.html
+++ b/employee-index.html
@@ -687,9 +687,27 @@ Header Buttons End
       <div class="row">
         <div class="col-lg-12">
           <div class="widget">
-            <div class="widget-header bordered-bottom bordered-themesecondary">
+            <div class="widget-header bordered-bottom bordered-themesecondary widget-cust">
               <i class="widget-icon fa fa-tags themesecondary"></i>
               <span class="widget-caption themesecondary">Order Details</span>
+              <div style="">
+                <div class="form-group" style="float:right;margin:2px;">
+                <select class="form-control" name="country" data-bv-field="country">
+                  <option value="">Select Reports</option>
+                  <option value="">Weekly Report</option>
+                  <option value="">Monthly Report</option>
+                </select>
+              </div>
+              <div class="form-group" style="float:right;margin:2px;">
+              <select class="form-control" name="country" data-bv-field="country">
+                <option value="">Select Orders</option>
+                <option value="">Total Jobs</option>
+                <option value="">Completed Jobs</option>
+                <option value="">Pending Jobs</option>
+                <option value="">Jobs in progress</option>
+              </select>
+            </div>
+              </div>
             </div><!--Widget Header-->
             <div class="widget-body  no-padding">
               <div class="tickets-container">
