--- a/index.html
+++ b/index.html
@@ -690,13 +690,6 @@
                     <i class="widget-icon fa fa-tags themesecondary"></i>
                     <span class="widget-caption themesecondary">Order Details</span>
                     <div style="">
-                      <div class="form-group" style="float:right;margin:2px;">
-                      <select class="form-control" name="country" data-bv-field="country">
-                        <option value="">Select Reports</option>
-                        <option value="">Weekly Report</option>
-                        <option value="">Monthly Report</option>
-                      </select>
-                    </div>
                     <div class="form-group" style="float:right;margin:2px;">
                     <select class="form-control" name="country" data-bv-field="country">
                       <option value="">Select Orders</option>
@@ -728,7 +721,7 @@
                               <td>05-03-18</td>
                               <td>Deep Employee Report</td>
                               <td>Public Information</td>
-                              <td>Approved </td>
+                              <td class="green">Approved </td>
                               <td>James</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -747,8 +740,8 @@
                               <td>11-03-18</td>
                               <td>Brand Endorsement Report</td>
                               <td>eCommerce</td>
-                              <td>Rejected</td>
-                              <td>Roy</td>
+                              <td class="red">Rejected</td>
+                              <td>-</td>
                               <td>
                                 <label class="switch-btn switch-flat">
                                   <input class="switch-input" type="checkbox" />
@@ -766,7 +759,7 @@
                               <td>22-03-18</td>
                               <td>Smith Employee Profile Report</td>
                               <td>Public Information</td>
-                              <td>Approved</td>
+                              <td class="green">Approved</td>
                               <td>Riya</td>
                               <td>
                                 <label class="switch-btn switch-flat">
