client order details page changed

--- a/client-order-details.html
+++ b/client-order-details.html
@@ -686,7 +686,7 @@
                   </div>
                 </div>
               </div>
-              <a type="submit" href="chat.html" class="btn cust-btn"><span class="fa fa-money"></span>Proceeded to Pay</a>
+              <a type="submit" href="" class="btn cust-btn"><span class="fa fa-money"></span>Proceeded to Pay</a>
               <div class="form-title">
                 Sub Order Information
               </div>
