updated some files.

--- a/employee-report-upload.html
+++ b/employee-report-upload.html
@@ -264,7 +264,7 @@
       <!-- Sidebar Menu -->
       <ul class="nav sidebar-menu">
         <!--Dashboard-->
-        <li>
+        <li class="active">
           <a href="employee-index.html">
             <i class="menu-icon glyphicon glyphicon-home"></i>
             <span class="menu-text"> Dashboard </span>
@@ -274,7 +274,7 @@
       <!-- /Sidebar Menu -->
     </div>
     <!-- /Page Sidebar -->
-    
+
     <!-- Page Content -->
     <div class="page-content">
       <!-- Page Breadcrumb -->
