--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
         <div class="or">OR</div>
       </div>
       <div class="loginbox-signup">
-        <span class="white"><a href="client-register.html">Register Here</a>
+        <span class="white"><a href="client-register.html">Register</a>
       </div>
     </div>
     <div class="loginbox bg-darkgray" id="forgot">
