files updated at 7pm

--- a/client-profile.html
+++ b/client-profile.html
@@ -54,7 +54,7 @@
                 <!-- /Navbar Barnd -->
                 <!-- Sidebar Collapse -->
                 <div class="sidebar-collapse" id="sidebar-collapse">
-                    <i class="collapse-icon fa fa-bars"></i>
+                    <i class="collapse-icon fa fa-caret-down"></i>
                 </div>
                 <!-- /Sidebar Collapse -->
                 <!-- Account Area and Settings --->
@@ -265,26 +265,20 @@
                     <!--Dashboard-->
                     <li>
                         <a href="client-index.html">
-                            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+                            <i class="menu-icon glyphicon glyphicon-dashboard"></i>
                             <span class="menu-text"> Dashboard </span>
                         </a>
                     </li>
                     <li>
                         <a href="service-agreement.html">
-                            <i class="menu-icon glyphicon glyphicon-wrench green"></i>
+                            <i class="menu-icon glyphicon glyphicon-wrench"></i>
                             <span class="menu-text"> Service Agreement </span>
                         </a>
                     </li>
                     <li>
                         <a href="research-intake-form.html">
-                            <i class="menu-icon fa fa-file-pdf-o purple"></i>
+                            <i class="menu-icon fa fa-file-pdf-o"></i>
                             <span class="menu-text"> Research Intake Form </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="client-view-orders.html">
-                            <i class="menu-icon fa fa-eye yellow"></i>
-                            <span class="menu-text"> View Orders </span>
                         </a>
                     </li>
 
@@ -292,7 +286,7 @@
                 <!-- /Sidebar Menu -->
             </div>
             <!-- /Page Sidebar -->
-            
+
             <!-- Page Content -->
             <div class="page-content">
                 <!-- Page Breadcrumb -->
