--- a/client-requestmoreinfo.html
+++ b/client-requestmoreinfo.html
@@ -270,19 +270,19 @@
         <!--Dashboard-->
         <li>
           <a href="client-index.html">
-            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+            <i class="menu-icon glyphicon glyphicon-dashboard"></i>
             <span class="menu-text"> Dashboard </span>
           </a>
         </li>
         <li>
           <a href="service-agreement.html">
-            <i class="menu-icon glyphicon glyphicon-wrench green"></i>
+            <i class="menu-icon glyphicon glyphicon-wrench"></i>
             <span class="menu-text"> Service Agreement </span>
           </a>
         </li>
         <li>
           <a href="research-intake-form.html">
-            <i class="menu-icon fa fa-file-pdf-o purple"></i>
+            <i class="menu-icon fa fa-file-pdf-o"></i>
             <span class="menu-text"> Research Intake Form </span>
           </a>
         </li>
