--- a/edit-client.html
+++ b/edit-client.html
@@ -266,7 +266,7 @@
                     <!--Dashboard-->
                     <li>
                         <a href="index.html">
-                            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+                            <i class="menu-icon glyphicon glyphicon-dashboard"></i>
                             <span class="menu-text"> Dashboard </span>
                         </a>
                     </li>
@@ -278,7 +278,7 @@
                     </li>
                     <li class="active">
                         <a href="client.html">
-                            <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
+                            <i class="menu-icon glyphicon glyphicon-copyright-mark"></i>
                             <span class="menu-text"> Client </span>
                         </a>
                     </li>
