--- a/employee-index.html
+++ b/employee-index.html
@@ -273,7 +273,7 @@
       <!-- /Sidebar Menu -->
     </div>
     <!-- /Page Sidebar -->
-    
+
     <!-- Page Content -->
     <div class="page-content">
       <!-- Page Breadcrumb -->
@@ -285,37 +285,10 @@
           </li>
         </ul>
       </div>
-      <!-- /Page Breadcrumb -->
-      <!-- Page Header
-      <div class="page-header position-relative">
-      <div class="header-title">
-      <h1 class="theme-color">
-      Employee Dashboard
-    </h1>
-  </div>
-  <div class="header-right" style="float:right !important;">
-  <div class="form-group emplpoyee-select">
-  <select class="form-control" id="sel1">
-  <option>Select Report</option>
-  <option>Weekly</option>
-  <option>Monthly</option>
-  <option>Yearly</option>
-</select>
-</div>
-</div>
-
-<div class="header-buttons">
-<a class="sidebar-toggler" href="#">
-<i class="fa fa-arrows-h"></i>
-</a>
-</div>
-Header Buttons End
-</div>
-/Page Header -->
 <!-- Page Body -->
 <div class="page-body">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <div class="dash-card">
         <div class="dash-content">
           <div class="dash-card-yellow">
@@ -328,7 +301,7 @@ Header Buttons End
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <div class="dash-card">
         <div class="dash-content">
           <div class="dash-card-green">
@@ -341,7 +314,7 @@ Header Buttons End
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <div class="dash-card">
         <div class="dash-content">
           <div class="dash-card-red">
@@ -354,7 +327,7 @@ Header Buttons End
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
       <div class="dash-card">
         <div class="dash-content">
           <div class="dash-card-green">
@@ -378,14 +351,14 @@ Header Buttons End
               <i class="widget-icon fa fa-tags themesecondary"></i>
               <span class="widget-caption themesecondary">Order Details</span>
               <div style="">
-                <div class="form-group" style="float:right;margin:2px;">
+                <div class="form-group cust-select-ctrl">
                 <select class="form-control" name="country" data-bv-field="country">
                   <option value="">Select Reports</option>
                   <option value="">Weekly Report</option>
                   <option value="">Monthly Report</option>
                 </select>
               </div>
-              <div class="form-group" style="float:right;margin:2px;">
+              <div class="form-group cust-select-ctrl">
               <select class="form-control" name="country" data-bv-field="country">
                 <option value="">Select Orders</option>
                 <option value="">Total Jobs</option>
@@ -398,8 +371,8 @@ Header Buttons End
             </div><!--Widget Header-->
             <div class="widget-body  no-padding">
               <div class="tickets-container">
-                <div class="table-responsive mrg-top-10">
-                  <table class="table table-striped table-design employee-table">
+                <div class="table-responsive">
+                  <table class="table table-striped table-design last-child-two">
                     <thead>
                       <tr>
                         <th>Assign Date</th>
