--- a/profile.html
+++ b/profile.html
@@ -264,31 +264,31 @@
                   <!--Dashboard-->
                   <li>
                     <a href="index.html">
-                      <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+                      <i class="menu-icon glyphicon glyphicon-dashboard"></i>
                       <span class="menu-text"> Dashboard </span>
                     </a>
                   </li>
                   <li>
                     <a href="employee.html">
-                      <i class="menu-icon fa fa-users yellow"></i>
+                      <i class="menu-icon fa fa-users"></i>
                       <span class="menu-text"> Employees </span>
                     </a>
                   </li>
                   <li>
                     <a href="client.html">
-                      <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
+                      <i class="menu-icon glyphicon glyphicon-copyright-mark"></i>
                       <span class="menu-text"> Clients </span>
                     </a>
                   </li>
                   <li>
                     <a href="jobs.html">
-                      <i class="menu-icon fa fa-info pink"></i>
+                      <i class="menu-icon fa fa-info"></i>
                       <span class="menu-text"> Jobs </span>
                     </a>
                   </li>
                   <li>
                     <a href="payment-settings.html">
-                      <i class="menu-icon fa fa-money blue"></i>
+                      <i class="menu-icon fa fa-money"></i>
                       <span class="menu-text"> Payment Settings </span>
                     </a>
                   </li>
