--- a/service-agreement.html
+++ b/service-agreement.html
@@ -60,7 +60,7 @@
                 <!-- /Navbar Barnd -->
                 <!-- Sidebar Collapse -->
                 <div class="sidebar-collapse" id="sidebar-collapse">
-                    <i class="collapse-icon fa fa-bars"></i>
+                    <i class="collapse-icon fa fa-caret-down"></i>
                 </div>
                 <!-- /Sidebar Collapse -->
                 <!-- Account Area and Settings --->
@@ -270,19 +270,19 @@
                     <!--Dashboard-->
                     <li>
                         <a href="client-index.html">
-                            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+                            <i class="menu-icon glyphicon glyphicon-dashboard"></i>
                             <span class="menu-text"> Dashboard </span>
                         </a>
                     </li>
                     <li class="active">
                         <a href="service-agreement.html">
-                            <i class="menu-icon glyphicon glyphicon-wrench green"></i>
+                            <i class="menu-icon glyphicon glyphicon-wrench"></i>
                             <span class="menu-text"> Service Agreement </span>
                         </a>
                     </li>
                     <li>
                         <a href="research-intake-form.html">
-                            <i class="menu-icon fa fa-file-pdf-o purple"></i>
+                            <i class="menu-icon fa fa-file-pdf-o"></i>
                             <span class="menu-text"> Research Intake Form </span>
                         </a>
                     </li>
@@ -290,7 +290,7 @@
                 <!-- /Sidebar Menu -->
             </div>
             <!-- /Page Sidebar -->
-            
+
             <!-- Page Content -->
             <div class="page-content">
                 <!-- Page Breadcrumb -->
@@ -312,7 +312,7 @@
                   <div class="row">
                       <div class="col-md-12 col-lg-12">
                         <div class="page-view">
-                          <div class="btn-style">
+                          <div class="btn-style service-btn-mbl">
                             <button class="button" id="singature-click"><span>Electronic Signature </span></button>
                             <button class="button pull-right" id="upload-click"><span>Sign & Upload Service Agreement</span></button>
                           </div>
