--- a/index.html
+++ b/index.html
@@ -264,31 +264,31 @@
         <!--Dashboard-->
         <li class="active">
           <a href="index.html">
-            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+            <i class="menu-icon glyphicon glyphicon-dashboard"></i>
             <span class="menu-text"> Dashboard </span>
           </a>
         </li>
         <li>
           <a href="employee.html">
-            <i class="menu-icon fa fa-users yellow"></i>
+            <i class="menu-icon fa fa-users"></i>
             <span class="menu-text"> Employees </span>
           </a>
         </li>
         <li>
           <a href="client.html">
-            <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
+            <i class="menu-icon glyphicon glyphicon-copyright-mark"></i>
             <span class="menu-text"> Clients </span>
           </a>
         </li>
         <li>
           <a href="configuration.html">
-            <i class="menu-icon fa fa-info pink"></i>
+            <i class="menu-icon fa fa-info"></i>
             <span class="menu-text"> Configuration </span>
           </a>
         </li>
         <li>
           <a href="payment-settings.html">
-            <i class="menu-icon fa fa-money blue"></i>
+            <i class="menu-icon fa fa-money"></i>
             <span class="menu-text"> Payment Settings </span>
           </a>
         </li>
@@ -296,7 +296,7 @@
       <!-- /Sidebar Menu -->
     </div>
     <!-- /Page Sidebar -->
-    
+
     <!-- Page Content -->
     <div class="page-content">
       <!-- Page Breadcrumb -->
@@ -313,7 +313,7 @@
       <!-- Page Body -->
       <div class="page-body">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="dash-card">
               <div class="dash-content">
                 <div class="dash-card-yellow">
@@ -326,7 +326,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="dash-card">
               <div class="dash-content">
                 <div class="dash-card-green">
@@ -339,7 +339,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="dash-card">
               <div class="dash-content">
                 <div class="dash-card-red">
@@ -352,7 +352,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="dash-card">
               <div class="dash-content">
                 <div class="dash-card-green">
@@ -376,7 +376,7 @@
                     <i class="widget-icon fa fa-tags themesecondary"></i>
                     <span class="widget-caption themesecondary">Order Details</span>
                     <div style="">
-                    <div class="form-group" style="float:right;margin:2px;">
+                    <div class="form-group cust-select-ctrl">
                     <select class="form-control" name="country" data-bv-field="country">
                       <option value="">Select Orders</option>
                       <option value="">Total orders</option>
@@ -389,7 +389,7 @@
                   </div><!--Widget Header-->
                   <div class="widget-body  no-padding">
                     <div class="tickets-container">
-                      <div class="table-responsive mrg-top-10">
+                      <div class="table-responsive">
                         <table class="table table-striped table-design employee-table">
                           <thead>
                             <tr>
