--- a/research-intake-form.html
+++ b/research-intake-form.html
@@ -59,7 +59,7 @@
         <!-- /Navbar Barnd -->
         <!-- Sidebar Collapse -->
         <div class="sidebar-collapse" id="sidebar-collapse">
-          <i class="collapse-icon fa fa-bars"></i>
+          <i class="collapse-icon fa fa-caret-down"></i>
         </div>
         <!-- /Sidebar Collapse -->
         <!-- Account Area and Settings --->
@@ -269,19 +269,19 @@
         <!--Dashboard-->
         <li>
           <a href="client-index.html">
-            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+            <i class="menu-icon glyphicon glyphicon-dashboard"></i>
             <span class="menu-text"> Dashboard </span>
           </a>
         </li>
         <li>
           <a href="service-agreement.html">
-            <i class="menu-icon glyphicon glyphicon-wrench green"></i>
+            <i class="menu-icon glyphicon glyphicon-wrench"></i>
             <span class="menu-text"> Service Agreement </span>
           </a>
         </li>
         <li class="active">
           <a href="research-intake-form.html">
-            <i class="menu-icon fa fa-file-pdf-o purple"></i>
+            <i class="menu-icon fa fa-file-pdf-o"></i>
             <span class="menu-text"> Research Intake Form </span>
           </a>
         </li>
@@ -289,7 +289,7 @@
       <!-- /Sidebar Menu -->
     </div>
     <!-- /Page Sidebar -->
-    
+
     <!-- Page Content -->
     <div class="page-content">
       <!-- Page Breadcrumb -->
